# davinci_arm

./: .gitignore  README.md
davinci_arm/: CHANGELOG.md  CMakeLists.txt  package.xml
davinci_arm_characterization/: CMakeLists.txt  package.xml
davinci_arm_characterization/config/: joint_tf_visualizer.yaml
davinci_arm_characterization/data/: DavinciArm_recording_20260406_154342.csv  DavinciArm_recording_20260406_154423.csv  DavinciArm_recording_20260406_162151.csv
davinci_arm_characterization/include/davinci_arm_characterization/: joint_tf_visualizer.hpp
davinci_arm_characterization/launch/: joint_tf_visualizer.launch.py
davinci_arm_characterization/src/: joint_tf_visualizer.cpp  joint_tf_visualizer_node.cpp
davinci_arm_description/: CMakeLists.txt  package.xml
davinci_arm_description/config/: dynamics_params.yaml  dynamics_params_v2.yaml  dynamics_params_v3.yaml
davinci_arm_description/launch/: display_gazebo.launch.py  display_model.launch.py  display_rviz.launch.xml  display_standalone.launch.py  publish_urdf.launch.py
davinci_arm_description/models/davinci_arm_v1/urdf/: davinci_arm.urdf.xacro  davinci_arm_helpers.xacro
davinci_arm_description/models/davinci_arm_v2/meshes/collisions/: arm.stl  base.stl  bicep.stl  end_effector.stl  shoulder.stl  wrist.stl
davinci_arm_description/models/davinci_arm_v2/meshes/visuals/: base.mtl
davinci_arm_description/models/davinci_arm_v2/urdf/: davinci_arm.urdf.xacro  davinci_arm_helpers.xacro
davinci_arm_description/models/davinci_arm_v3/meshes/: ExpoUltraFineBody.stl  ExpoUltraFineBrandLogoProjection037.stl  ExpoUltraFineTip.stl  arm_2.stl  base_joint.stl  elbow.stl  shoulderbse__1.stl  size_0__flange.stl  size_0_cap.stl  size_0_shoulder_1.stl  size_0_shoulder_3.stl  size_1_cap.stl  size_1_flange.stl  size_1_shoulder.stl  size_2_cap.stl  size_2_flange.stl  tool_holder.stl  upper_arm.stl
davinci_arm_description/models/davinci_arm_v3/urdf/: davinci_arm.urdf.xacro  davinci_arm_helpers.xacro
davinci_arm_description/rviz/: davinci_arm_display.rviz
davinci_arm_draw_app/: CMakeLists.txt  package.xml
davinci_arm_draw_app/src/: davinci_arm_draw_app.cpp
davinci_arm_gazebo/: CMakeLists.txt  package.xml
davinci_arm_gazebo/config/: scenery.config
davinci_arm_gazebo/launch/: spawn_models.launch.py  spawn_robot.launch.py  spawn_world.launch.py  start_gazebo.launch.py
davinci_arm_gazebo/worlds/: main_world.sdf
davinci_arm_gazebo_bridge/: package.xml  (+1 more)
davinci_arm_gazebo_plugins/: CMakeLists.txt  package.xml
davinci_arm_gazebo_plugins/config/: topic_parameters.yaml
davinci_arm_gazebo_plugins/include/davinci_arm_gazebo_plugins/: davinci_hardware_interface.hpp  davinci_moveit_adapter.hpp
davinci_arm_gazebo_plugins/launch/: spawn_controllers.launch.py
davinci_arm_gazebo_plugins/src/: davinci_hardware_interface.cpp  davinci_moveit_adapter.cpp
davinci_arm_gazebo_plugins/urdf/: davinci_arm_control.xacro  davinci_arm_hardware_interface_plugin.xml  davinci_arm_joint_position_model.xacro  davinci_arm_moveit_adapter_plugin.xml
davinci_arm_gui/: CMakeLists.txt  package.xml
davinci_arm_gui/config/: gui_config.yaml  limits_config.yaml
davinci_arm_gui/include/davinci_arm_gui/app/: app_context.hpp  main_window.hpp  ros_qt_bridge.hpp
davinci_arm_gui/include/davinci_arm_gui/core/charts/: chart_window.hpp  curve_builder.hpp  hover_interpolator.hpp  sample_rate_estimator.hpp  value_filter.hpp
davinci_arm_gui/include/davinci_arm_gui/core/logging/: data_exporter.hpp  data_recorder.hpp
davinci_arm_gui/include/davinci_arm_gui/core/math/: units.hpp
davinci_arm_gui/include/davinci_arm_gui/core/models/: calibration_interfaces.hpp  calibration_types.hpp  command_type.hpp  csv_export_options.hpp  domain.hpp  domain_buffer.hpp  domain_state.hpp  drawing_types.hpp  dynamics_params.hpp  limits_type.hpp  plot_signal_type.hpp  range_type.hpp  recording_state.hpp  recording_stats.hpp  telemetry_sample.hpp  telemetry_signal_type.hpp  telemetry_store.hpp  theme_id.hpp
davinci_arm_gui/include/davinci_arm_gui/core/services/: calibration_interfaces.hpp  calibration_optimizer.hpp  calibration_service.hpp  drawing_interfaces.hpp  drawing_service.hpp  recorder_service.hpp  signal_alignment.hpp  simple_calibration_optimizer.hpp  urdf_sim_param_applier.hpp  urdf_updater.hpp
davinci_arm_gui/include/prop_arm_gui/app/: app_context.hpp  main_window.hpp  ros_qt_bridge.hpp
davinci_arm_gui/launch/: display_gui.launch.py
davinci_arm_gui/resources/: resources.qrc
davinci_arm_gui/resources/theme/: cyberpunk.qss  dark.qss  light.qss  matlab.qss  tron_ares.qss  tron_evolution.qss
davinci_arm_gui/src/: main.cpp
davinci_arm_gui/src/app/: app_context.cpp  main_window.cpp  ros_qt_bridge.cpp
davinci_arm_gui/src/core/charts/: chart_window.cpp  curve_builder.cpp  hover_interpolator.cpp  sample_rate_estimator.cpp  value_filter.cpp
davinci_arm_gui/src/core/logging/: data_exporter.cpp  data_recorder.cpp
davinci_arm_gui/src/core/models/: telemetry_store.cpp
davinci_arm_gui/src/core/services/: calibration_optimizer.cpp  calibration_service.cpp  drawing_service.cpp  recorder_service.cpp  signal_alignment.cpp  step_calibration_commander.cpp  urdf_sim_param_applier.cpp  urdf_updater.cpp
davinci_arm_gui/src/infra/ros/: davinci_arm_ros_bridge.cpp  davinci_arm_ros_bridge_command_sink.cpp  limits_registry.cpp  prop_arm_ros_bridge.cpp  prop_arm_ros_bridge_command_sink.cpp  step_calibration_commander.cpp  topic_registry.cpp
davinci_arm_gui/src/ui/pages/: calibration_page.cpp  control_panel_page.cpp  dashboard_page.cpp  drawing_page.cpp
davinci_arm_gui/src/ui/style/: chart_theme_applier.cpp  theme_manager.cpp
davinci_arm_gui/src/ui/widgets/: angle_plot.cpp  angle_ref_plot.cpp  arm_visualizer.cpp  chart_base.cpp  chart_frame.cpp  duty_plot.cpp  error_plot.cpp  export_preview_dialog.cpp  hover_chart_view.cpp  panel.cpp  pwm_plot.cpp  section_header.cpp  speed_plot.cpp  tracking_error_plot.cpp  value_tile.cpp
davinci_arm_msgs/: CMakeLists.txt  package.xml
davinci_arm_msgs/msg/: JointsStates.msg
davinci_arm_msgs/msgs/: group_of_joints.msgs
(+98 files in other folders)
